# AfriTeVa-keji

./: .envexample  .example.env  .gitignore  .gitmodules  README.md  pyproject.toml
config/models/t5_1_1/: base.gin  large.gin
config/models/tpu/t5_1_1/: base.gin  large.gin
config/runs/t5_1_1/: eval.gin  finetune.gin  pretrain.gin
config/runs/tpu/: eval.gin  finetune.gin  pretrain.gin
notebooks/: evaluation.ipynb
requirements/: requirements-gpu.txt  requirements-tpu.txt
scripts/: afriqa.sh  calculate_fertility.sh  collate_classification.sh  lafand_mt.sh  masakhanews_ft.sh  pretrain.sh  run_torch_classification.sh  run_torch_summarization.sh  run_torch_translation.sh  sample_sentences.sh  split_by_sources.sh  t5_utils.sh  task_ft_and_eval.sh  tokenize.sh  train_t5_tpu.sh  train_tokenizer.sh  xlsum.sh
scripts/datasets/: aya_statistics.sh  create_xp3x_african_subset.sh  download_aya.sh  download_flan_collection.sh  download_octopack_osst.sh  download_xp3x.sh  utils.sh  xp3x_statistics.sh
scripts/python/: convert_model.py  fertility.py  sample_sentences.py  tokenize_data.py  train_sentencepiece.py
scripts/tasks/: aya.sh  lafand_mt.sh  masakhanews_ft.sh  task_ft_and_eval.sh  xlsum_xlingual.sh
src/teva/: __main__.py  constants.py  metrics.py  mixture_utils.py  postprocessors.py  preprocessors.py  tasks.py  utils.py  vocab.py
src/teva/torch/: arguments.py  dataset.py  train.py
src/teva/torch/classification/: __main__.py  arguments.py  collate_results.py  dataset.py  utils.py
src/teva/torch/summarization/: __main__.py  arguments.py  dataset.py  trainer.py
src/teva/torch/translation/: __main__.py  arguments.py  dataset.py
tokenizers/v150000/: sentencepiece.bpe.model  sentencepiece.bpe.vocab
tokenizers/v150000/stats/hau/: multi_sentence_lengths.json  multi_token_lengths.json  sentence_lengths.json  summary_stats.json  token_lengths.json
tokenizers/v150000/stats/ibo/: multi_sentence_lengths.json  multi_token_lengths.json  sentence_lengths.json  summary_stats.json  token_lengths.json
tokenizers/v150000/stats/kin/: multi_sentence_lengths.json  multi_token_lengths.json  sentence_lengths.json  summary_stats.json  token_lengths.json
tokenizers/v150000/stats/nya/: multi_sentence_lengths.json  multi_token_lengths.json  sentence_lengths.json  summary_stats.json  token_lengths.json
tokenizers/v150000/stats/sna/: multi_sentence_lengths.json  multi_token_lengths.json  sentence_lengths.json  summary_stats.json  token_lengths.json
tokenizers/v150000/stats/swa/: multi_sentence_lengths.json  multi_token_lengths.json  sentence_lengths.json  summary_stats.json  token_lengths.json
(+15 files in other folders)
