[build-system]
requires = ["setuptools>=64.0.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "AfriTeVa"
description = "LLMs for African Languages"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.8"

dependencies = [
  'python-dotenv',
  't5',
  'tensorflow_io'
]

dynamic = [
  "version",
]
classifiers = [
    'Development Status :: 3 - Alpha',
    'Intended Audience :: Developers',
    'Intended Audience :: Information Technology',
    'Intended Audience :: Science/Research',
    'License :: OSI Approved :: Apache Software License',
    'Programming Language :: Python',
    'Topic :: Software Development :: Libraries :: Python Modules',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
license = { text = "Apache-2.0" }

[project.optional-dependencies]
dev = [
  'ipykernel',
]
cpu = ['jax[cpu]']
gpu = ['jax[cuda12_pip]', 't5x @ git+https://github.com/google-research/t5x.git']
tpu=['t5x[tpu] @ git+https://github.com/google-research/t5x.git']

[project.urls]
Homepage = "https://github.com/castorini/afribertav2"

[project.scripts]
teva = "teva.cli:main"